--- a/app/scss/blocks/blog-list.scss
+++ b/app/scss/blocks/blog-list.scss
@@ -5,7 +5,7 @@
 		padding: 30px 0px 60px;
 	}
 
-	@media (max-width: 1000px) {
+	@media (max-width: 991.98px) {
 		padding: 30px 0px 30px;
 	}
 
@@ -18,7 +18,7 @@
 		display: flex;
 		margin: 0px -15px;
 
-		@media (max-width: 1000px) {
+		@media (max-width: 991.98px) {
 			flex-direction: column;
 			margin: 0px 0px;
 		}
@@ -32,7 +32,7 @@
 		display: flex;
 		flex-direction: column;
 
-		@media (max-width: 1000px) {
+		@media (max-width: 991.98px) {
 			padding: 0px 0px;
 		}
 	}
@@ -43,7 +43,7 @@
 		flex-flow: row wrap;
 		margin: -25px -15px;
 
-		@media (max-width: 1000px) {
+		@media (max-width: 991.98px) {
 			margin: -15px -15px;
 		}
 
@@ -96,7 +96,7 @@
 		flex: 0 1 50%;
 		padding: 25px 15px;
 
-		@media (max-width: 1000px) {
+		@media (max-width: 991.98px) {
 			padding: 15px 15px;
 		}
 
@@ -130,7 +130,7 @@
 			margin: 0px 0px 20px 0px;
 		}
 
-		@media (max-width: 1000px) {
+		@media (max-width: 991.98px) {
 			padding: 0 0 55% 0px;
 			margin: 0px 0px 10px 0px;
 		}
@@ -163,7 +163,7 @@
 		margin: 0 0 15px 0;
 		transition: color .3s;
 
-		@media (max-width: 1000px) {
+		@media (max-width: 991.98px) {
 			font-size: 18px;
 			line-height: 20px;
 			margin: 0 0 10px 0;
@@ -224,7 +224,7 @@
 			margin: 0 0 15px 0;
 		}
 
-		@media (max-width: 1000px) {
+		@media (max-width: 991.98px) {
 			margin: 0 0 10px 0;
 		}
 
@@ -263,7 +263,7 @@
 		-webkit-line-clamp: 3;
 		-webkit-box-orient: vertical;
 
-		@media (max-width: 1000px) {
+		@media (max-width: 991.98px) {
 			margin: 0 0 15px 0;
 		}
 	}
@@ -297,15 +297,11 @@
 		display: flex;
 		flex-direction: column;
 		
-		@media (max-width: 1000px) {
+		@media (max-width: 991.98px) {
 			margin: 50px 0px 0px 0px;
 			padding: 0px 0px;
 			flex-flow: row wrap;
 			justify-content: space-between;
-		}
-
-		@media (max-width: 560px) {
-			flex-direction: column;
 		}
 	}
 
@@ -319,31 +315,28 @@
 			margin: 0px 0px 40px 0px;
 		}
 
-		@media (max-width: 1000px) {
+		@media (max-width: 991.98px) {
 			flex: 0 1 48%;
 			margin: 0 0 30px 0;
 		}
 
 		@media (max-width: 480px) {
 			margin: 0 0 20px 0;
+			flex: 0 1 100%;
 		}
 	}
 
 	&__sidebar-search {
 
-		@media (max-width: 1000px) {
+		@media (max-width: 991.98px) {
 			display: none;
 		}
 	}	
 
 	&__sidebar-block {
 
-		@media (max-width: 1000px) {
+		@media (max-width: 991.98px) {
 			flex: 0 1 100%;
-			
-			img {
-				height: 150px;
-			}
 		}
 	}
 }
