--- a/app/scss/blocks/detail.scss
+++ b/app/scss/blocks/detail.scss
@@ -1,7 +1,7 @@
 .detail {
 	padding: 50px 0px 90px;
 
-	@media (max-width: 1000px) {
+	@media (max-width: 991.98px) {
 		padding: 20px 0 20px;
 	}
 
@@ -11,7 +11,7 @@
 		display: flex;
 		margin: 0px -15px;
 
-		@media (max-width: 1000px) {
+		@media (max-width: 991.98px) {
 			flex-direction: column;
 		}
 	}
@@ -25,7 +25,7 @@
 		display: flex;
 		flex-direction: column;
 
-		@media (max-width: 1000px) {
+		@media (max-width: 991.98px) {
 			margin: 50px 0px 0px 0px;
 		}
 
@@ -47,13 +47,9 @@
 		display: flex;
 		flex-direction: column;
 		
-		@media (max-width: 1000px) {
+		@media (max-width: 991.98px) {
 			flex-flow: row wrap;
 			justify-content: space-between;
-		}
-
-		@media (max-width: 560px) {
-			flex-direction: column;
 		}
 	}
 
@@ -66,9 +62,13 @@
 			margin: 0px 0px 40px 0px;
 		}
 
-		@media (max-width: 1000px) {
+		@media (max-width: 991.98px) {
 			flex: 0 1 48%;
 			margin: 0 0 30px 0;
+		}
+
+		@media (max-width: 560px) {
+			flex: 0 1 100%;
 		}
 
 		@media (max-width: 480px) {
@@ -78,18 +78,14 @@
 
 	&__content-block {
 
-		@media (max-width: 1000px) {
+		@media (max-width: 991.98px) {
 			flex: 0 1 100%;
-
-			img {
-				height: 180px;
-			}
 		}
 	}
 
 	&__content-popular {
 
-		@media (max-width: 1000px) {
+		@media (max-width: 991.98px) {
 			margin: 0px 0px 30px 0px;
 		}
 
@@ -105,7 +101,7 @@
 	&__content-cart {
 		margin: 0px 0px 45px 0px;
 
-		@media (max-width: 1000px) {
+		@media (max-width: 991.98px) {
 			flex: 0 1 48%;
 		}
 
