--- a/app/scss/components/popular-product.scss
+++ b/app/scss/components/popular-product.scss
@@ -3,6 +3,7 @@
 	// .popular-product__title
 
 	&__title {
+		display: flex;
 		color: #333333;
 		font-size: 20px;
 		font-weight: 800;
@@ -10,10 +11,8 @@
 		margin: 0px 0px 20px 0px;
 	}
 
-	// .popular-product__slider
-
-	&__slider {
-		max-width: 1500px;
+	&__tabs {
+		
 	}
 
 	// .popular-product__slider-item
@@ -32,18 +31,55 @@
 
 	&__row {
 		display: flex;
+		justify-content: space-between;
 		margin: 0 -15px;
+
+		@media (max-width: 1300px) {
+			margin: 0 -10px;
+		}
 	}
 
 	&__column {
-		flex: 0 1 20%;
 		padding: 0px 15px;
-	}
-	// .popular-product__categories
 
-	&__categories {
+		@media (max-width: 1300px) {
+			padding: 0px 10px;
 
+			&:nth-child(5){
+				display: none;
+			}
+		}
 
+		@media (max-width: 1100px) {
+			&:nth-child(4){
+				display: none;
+			}
+		}
+
+		@media (max-width: 992px) {
+			&:nth-child(4){
+				display: block;
+			}
+		}
+
+		@media (max-width: 850px) {
+			&:nth-child(4){
+				display: none;
+			}
+		}
+	
+		@media (max-width: 650px) {
+			width: 100%;
+			&:nth-child(3){
+				display: none;
+			}
+		}
+
+		@media (max-width: 430px) {
+			&:nth-child(2){
+				display: none;
+			}
+		}
 	}
 
 	// .popular-product__categories-img
@@ -66,5 +102,56 @@
 		font-weight: 400;
 		line-height: 22px;
 		text-align: center;
+	}
+}
+
+.tabs {
+
+	&__slider {
+		max-width: 100%;
+		margin: 0px 0px 30px 0px;
+	}
+
+	&__slider-item {
+
+	}
+
+	&__title {
+		
+	}
+
+
+	&__title-item {
+		text-align: center;
+	}
+
+	&__title-item--active {
+		.popular-product__slider-item {
+			border-color: #e12121;
+			position: relative;
+
+			&::after {
+				content: "";
+				position: absolute;
+				left: 50%;
+				transform: translateX(-50%);
+				bottom: -6px;
+				border-top: 5px solid #e12121;
+				border-left: 5px solid transparent;
+				border-right: 5px solid transparent;
+			}
+		}
+	}
+
+	&__content {
+		
+	}
+
+	&__content-item {
+		display: none;
+	}
+
+	&__content-item--active {
+		display: block;
 	}
 }
