--- a/app/scss/components/sidebar-nav.scss
+++ b/app/scss/components/sidebar-nav.scss
@@ -44,12 +44,26 @@
 		right: 0;
 		width: 100%;
 		transition: background 500ms ease;
+
+		&:hover {
+			@media (min-width: 991.98px) {
+				.sidebar-nav__link--dark {
+					background: #e12121;
+					color: #fff;
+				}
+
+				.sidebar-nav__link--light {
+					background: #fff;
+					color: #e12121;
+				}
+			}
+		}
 	}
 
 	&__item-dropdown {
 
 		&.active {
-			@media (max-width: 1000px) {
+			@media (max-width: 991.98px) {
 				.sidebar-nav__dropdown {
 					display: block;
 				}
@@ -85,24 +99,10 @@
 
 		&--dark {
 			color: #333333;
-
-			&:hover {
-				@media (min-width: 1000px) {
-					background: #e12121;
-					color: #fff;
-				}
-			}
 		}
 		  
 	  	&--light {
 			color: #ffffff;
-
-			&:hover {
-				@media (min-width: 1000px) {
-					background: #fff;
-					color: #e12121;
-				}
-			}
   		}
 
 	}
@@ -119,7 +119,7 @@
 			transform: translateY(-50%);
 			transition: transform .3s ease;
 	
-			@media (max-width: 1000px) {
+			@media (max-width: 991.98px) {
 				content: "\f107";
 			}
 		}
@@ -138,7 +138,7 @@
 		box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 		border-radius: 5px;
 
-		@media (max-width: 1000px) {
+		@media (max-width: 991.98px) {
 			position: relative;
 			left: 0;
 			top: 100%;
@@ -167,7 +167,7 @@
 	&__dropdown-img {
 		display: block;
 
-		@media (max-width: 1000px) {
+		@media (max-width: 991.98px) {
 			display: none;
 		}
 
@@ -197,13 +197,9 @@
 		}
 	}
 
-	&__dropdown-item  {
-
-	}
-
 	&__item:hover .sidebar-nav__dropdown{
 
-		@media (min-width: 1000px) {
+		@media (min-width: 991.98px) {
 			display: block;
 		}
 	}
