--- a/app/scss/blocks/shop-col.scss
+++ b/app/scss/blocks/shop-col.scss
@@ -91,7 +91,8 @@
 	&__content-product,
 	&__content-sponsor,
 	&__content-featured,
-	&__content-information {
+	&__content-information,
+	&__content-tabs {
 		margin: 0px 0px 50px 0px;
 
 		@media (max-width: 1400px) {
