--- a/app/scss/blocks/information_01.scss
+++ b/app/scss/blocks/information_01.scss
@@ -65,6 +65,10 @@
 			font-size: 18px;
 		}
 
+		@media (max-width: 550px) {
+			line-height: 30px;
+		}
+
 		span {
 			display: block;
 			font-size: 45px;
@@ -80,6 +84,10 @@
 
 			@media (max-width: 650px) {
 				font-size: 30px;
+			}
+
+			@media (max-width: 550px) {
+				padding: 15px 0px 0px 0px;
 			}
 		}
 	}
