--- a/app/scss/blocks/policy.scss
+++ b/app/scss/blocks/policy.scss
@@ -14,7 +14,8 @@
 		}
 	
 		@media (max-width: 768px) {
-			padding: 40px 0px
+			padding: 40px 0px;
+			margin: 0px -15px 0px -15px;
 		}
 	
 		@media (max-width: 550px) {
@@ -85,9 +86,12 @@
 			flex: 0 1 49%;
 		}
 
+		@media (max-width: 768px) {
+			padding: 5px 10px;
+		}
+
 		@media (max-width: 550px) {
 			flex: 0 1 95%;
-			padding: 5px;
 		}
 
 	}
@@ -212,7 +216,7 @@
 			margin: 0px 0px 20px 0px;
 		}
 
-		@media (max-width: 550px) {
+		@media (max-width: 768px) {
 			margin: 0px 0px 10px 0px;
 		}
 
