--- a/app/scss/blocks/special-product.scss
+++ b/app/scss/blocks/special-product.scss
@@ -12,6 +12,7 @@
 
 	@media (max-width: 768px) {
 		padding: 40px 0px 60px;
+		margin: 0px -15px 0px -15px;
 	}
 
 	@media (max-width: 550px) {
@@ -39,6 +40,10 @@
 			flex-direction: column-reverse;
 			margin: -15px 0px;
 		}
+
+		@media (max-width: 480px) {
+			margin: -10px 0px;
+		}
 	}
 
 	// .special-product__column
@@ -50,6 +55,10 @@
 		@media (max-width: 768px) {
 			flex: 0 1 19.3%;
 			padding: 15px 0px;
+		}
+
+		@media (max-width: 480px) {
+			padding: 10px 0px;
 		}
 
 		&--bg {
@@ -65,6 +74,10 @@
 
 		@media (max-width: 768px) {
 			padding: 15px;
+		}
+
+		@media (max-width: 480px) {
+			padding: 0px 15px 15px 15px;
 		}
 	}
 
