--- a/app/scss/components/cart-detail.scss
+++ b/app/scss/components/cart-detail.scss
@@ -386,6 +386,7 @@
 		color: #ffffff;
 		font-size: 12px;
 		font-weight: 400;
+		white-space: nowrap;
 		text-transform: uppercase;
 		margin: 0px 30px 0px 0px;
 		transition: background-color .3s;
@@ -424,14 +425,13 @@
 	&__actions-list {
 		display: flex;
 		flex-flow: row wrap;
-		margin: 0px 19px 0px 0px;
 	}
 
 	// .cart-detail__actions-item
 
 	&__actions-item {
 		font-size: 13px;
-		line-height: 15px;
+		line-height: 18px;
 		font-weight: 400;
 		color: #888888;
 		margin: 0px 5px 0px 0px;
