--- a/app/scss/components/popular-product.scss
+++ b/app/scss/components/popular-product.scss
@@ -15,9 +15,19 @@
 		
 	}
 
+	&__categories {
+		display: flex;
+		flex-direction: column;
+		height: 100%;
+	}
+
 	// .popular-product__slider-item
 
 	&__slider-item {
+		display: flex;
+		flex-direction: column;
+		height: 100%;
+
 		position: relative;	
 		padding: 20px;
 		border: 1px solid #dddddd;
@@ -41,6 +51,7 @@
 
 	&__column {
 		padding: 0px 15px;
+		width: 100%;
 
 		@media (max-width: 1300px) {
 			padding: 0px 10px;
@@ -109,20 +120,22 @@
 
 	&__slider {
 		max-width: 100%;
+		height: 100%;
 		margin: 0px 0px 30px 0px;
 	}
 
 	&__slider-item {
-
+		height: 100%;
 	}
 
 	&__title {
-		
+
 	}
 
 
 	&__title-item {
 		text-align: center;
+		height: 100%;
 	}
 
 	&__title-item--active {
