--- a/app/scss/components/search.scss
+++ b/app/scss/components/search.scss
@@ -1,10 +1,14 @@
 .search {
 	position: absolute;
-	top: 57px;
+	top: 100%;
 	left: -340px;
 	opacity: 0;
 	visibility: hidden;
 	transition: opacity .3s;
+
+	@media (max-width: 991.98px) {
+		top: 57px;
+	}
 
 	@media (max-width: 715px) {
 		position: fixed;
