--- a/app/scss/blocks/newsletter.scss
+++ b/app/scss/blocks/newsletter.scss
@@ -1,5 +1,5 @@
 .newsletter {
-	background: url(../img/newsletter/bg.webp);
+	background-image: url("../img/newsletter/bg.jpg");
 	background-position: center 56%;
 	background-size: cover;
 	background-repeat: no-repeat;
