--- a/app/scss/components/setting.scss
+++ b/app/scss/components/setting.scss
@@ -54,7 +54,8 @@
 		padding: 30px;
 
 		&--black {
-			background: url(../img/basket__setting/bg_setting.webp), #000;
+			background-image: url("../img/basket__setting/bg_setting.jpg");
+			background-color: #000;
 			background-position: bottom;
 			background-size: contain;
 			background-repeat: no-repeat;
