--- a/app/scss/components/search.scss
+++ b/app/scss/components/search.scss
@@ -58,7 +58,9 @@
 		transition: color .3s;
 
 		&:hover {
-			color: #e12121;
+			@media (min-width: 991.98px) {
+				color: #e12121;
+			}
 		}
 	}
 }
