--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
 @charset "UTF-8";
 
-@import url("https://fonts.googleapis.com/css?family=Poppins:wght@300;
+@import url(https://fonts.googleapis.com/css?family=Poppins:300,regular,600);
 
-400;600&display=swap");
 @font-face {
   font-family: 'fontello';
   src: url("../fonts/fontello.eot?75512282");
