--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,5 +1,5 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Poppins:wght@300;400;600&display=swap');
+@import url(https://fonts.googleapis.com/css?family=Poppins:300,regular,600);
 
 // Mixins
 @import "mixins/adaptive-font";
